--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SECRET= BailemosTusa1@
 
-PEPE = LaBecinitaTieneAntojo23@
+PORT=3000
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=
+DB_DATABASE=practica1
